example-apps/guestbook/frontend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example-guestbook.apps.cluster1.kops.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
